[Fluent-bit] Parser glance

--- a/fluent_openstack_parser.conf
+++ b/fluent_openstack_parser.conf
@@ -1,2 +1,9 @@
 1. Glance
-^(?<log_time>[^ ][-.\d\+:T]+[ ]*[.:\d]*)\s+(?<pid>[^ ]\d+)\s+(?<severity>[^ ][.-_\w]+)\s+(?<component>[^ ][.-_\w]+)(\s+\[(-|(?<req_id>[^ ][-\w]*) (?<req_user>[^ ][-\w]*) (?<req_project>[^ ][-\w]*) (?<req_domain>[^ ][-\w]*) (?<req_user_domain>[^ ][-\w]*) (?<req_project_domain>[^ ][-\w]*))\]){1}\s+(?<requesterip>\S+) \- \- \[(?<req_date>\S+) (?<req_time>\S+)\] (?<req_method>\S+) (?<req_url>\S+) (?<http_ver>\S+) (?<response>\d+) (?<bytes>\d+) (?<seconds>.*)$
+
+[PARSER]
+    Name glance
+    Format regex
+    Regex ^(?<log_time>[^ ][-.\d\+:T]+[ ]*[.:\d]*)\s+(?<pid>[^ ]\d+)\s+(?<severity>[^ ][.-_\w]+)\s+(?<component>[^ ][.-_\w]+)(\s+\[(-|(?<req_id>[^ ][-\w]*) (?<req_user>[^ ][-\w]*) (?<req_project>[^ ][-\w]*) (?<req_domain>[^ ][-\w]*) (?<req_user_domain>[^ ][-\w]*) (?<req_project_domain>[^ ][-\w]*))\]){1}\s+(?<requesterip>\S+) \- \- \[(?<req_date>\S+) (?<req_time>\S+)\] (?<req_method>\S+) (?<req_url>\S+) (?<http_ver>\S+) (?<response>\d+) (?<bytes>\d+) (?<seconds>.*)$
+    Time_Format %Y-%m-%d %H:%M:%S.%L
+    Time_Keep   Off
+    Time_Key log_time
